# computer-use-preview

./: .gitignore  README.md  agent.py  data.json  demo_new_features.py  exceptions.py  form.html  form_agent.py  main.py  playwright-auth.toml.example  pyproject.toml  requirements.txt  test_agent.py  test_main.py
agent/: __init__.py  action_handler.py  browser_agent.py  conversation_manager.py  response_processor.py
computers/: __init__.py
computers/agentcore/: __init__.py  agentcore.py  utils.py
computers/playwright/: auth.py  playwright.py
config/: __init__.py  config.py  default_config.yaml
plugins/: __init__.py  base_plugin.py  builtin_actions.py  plugin_manager.py
utils/: __init__.py  logger.py  performance_monitor.py
